Updating tutorials and inserting hex figure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,qtlpoly.bvalues)
 S3method(plot,qtlpoly.effects)
 S3method(plot,qtlpoly.perm)
+S3method(plot,qtlpoly.rsmp)
 S3method(print,qtlpoly.data)
 S3method(print,qtlpoly.feim)
 S3method(print,qtlpoly.modify)
@@ -11,6 +12,7 @@ S3method(print,qtlpoly.optimize)
 S3method(print,qtlpoly.perm)
 S3method(print,qtlpoly.profile)
 S3method(print,qtlpoly.remim)
+S3method(print,qtlpoly.rsmp)
 S3method(print,qtlpoly.search)
 S3method(print,qtlpoly.simul)
 S3method(summary,qtlpoly.fitted)
@@ -31,6 +33,7 @@ export(profile_qtl)
 export(qtl_effects)
 export(read_data)
 export(remim)
+export(resampling)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
@@ -38,4 +41,5 @@ import(ggplot2)
 import(parallel)
 import(varComp)
 importFrom(abind,abind)
+importFrom(arrangements,combinations)
 importFrom(sommer,mmer)
