Replacing arrangements by gtools package
Necessary to remove GMP dependency, which can cause problems in
certain environments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,5 +41,5 @@ import(ggplot2)
 import(parallel)
 import(varComp)
 importFrom(abind,abind)
-importFrom(arrangements,combinations)
+importFrom(gtools,combinations)
 importFrom(sommer,mmer)
