--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,13 @@ Description: Performs random-effect multiple interval mapping (REMIM) in full-si
 License: GPL-3 | file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
+LazyDataCompression: xz
 Depends:
     R (>= 4.1.0)
 Imports:
     SPA3G (== 1.0), varComp (== 0.2), sommer (>= 4.0), ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), parallel, stats
-Suggests: mappoly, rmarkdown, devtools
+Suggests: mappoly, rmarkdown, devtools, knitr
+VignetteBuilder: knitr
 Remotes:
     cran/SPA3G, cran/varComp, mmollina/MAPpoly
 RoxygenNote: 7.1.2
