Adjusting package for CRAN submission

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ LazyDataCompression: xz
 Depends:
     R (>= 4.1.0)
 Imports:
-    SPA3G (== 1.0), varComp (== 0.2), sommer (>= 4.0), ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), parallel, stats
+    SPA3G (== 1.0), varComp (== 0.2), sommer (>= 4.0), ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), parallel, stats, methods
 Suggests: mappoly, rmarkdown, devtools, knitr
 VignetteBuilder: knitr
 Remotes:
