--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,13 @@ export(search_qtl)
 export(simulate_qtl)
 import(MASS)
 import(ggplot2)
+import(grDevices)
+import(graphics)
+import(methods)
 import(parallel)
+import(sommer)
+import(stats)
+import(utils)
 import(varComp)
 importFrom(abind,abind)
 importFrom(gtools,combinations)
-importFrom(sommer,mmer)
