--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ cache: packages
 #- devtools
 
 install:
-- R -e 'install.packages("devtools")'
-- R -e 'install.packages(c('sommer', 'ggplot2', 'abind', 'gtools', 'mappoly', 'rmarkdown'))'
-- R -e 'devtools::install_github('cran/SPA3G')'
-- R -e 'devtools::install_github('cran/varComp')'
+- R -e 'install.packages("remotes")'
+- R -e 'install.packages(c("sommer", "ggplot2", "abind", "gtools", "mappoly", "rmarkdown"))'
+- R -e 'remotes::install_github("cran/SPA3G")'
+- R -e 'remotes::install_github("cran/varComp")'
 
 r_build_args: --no-build-vignettes
 r_check_args: --no-vignettes
