Small updates for CRAN

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,22 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
+^.*\.pdf
+^.*\.pptx
+^.*\.gif
+^.*\.yml
+^.*\.ai
+^.*\.png
+^r-release$
+^revdep$
+^my_tests$
+^ExamplesTestLogs$
+^.cran-comments\.md
+cran-comments.md
+^CRAN-RELEASE$
+^appveyor\.yml$
+^tests/testthat/Rplots\.pdf
+^old_cran-comments$
+backup_QTLpoly_testing_data.RData
+hex.xcf
+test-qtl.R
+vigs
