--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: qtlpoly
 Type: Package
-Title: Random-effect multiple QTL mapping in autopolyploids
+Title: Random-Effect Multiple QTL Mapping in Autopolyploids
 Version: 0.2.2
 Authors@R: c(person(given = "Guilhereme",
                     family = "da Silva Pereira",
@@ -20,9 +20,10 @@ Authors@R: c(person(given = "Guilhereme",
             person(given = "Zhao-Bang",
                     family = "Zeng",
                     role = "ctb",
+                    email = "szeng@ncsu.edu",
                     comment = c(ORCID="0000-0002-3115-1149")))
 Maintainer: Gabriel de Siqueira Gesteira <gdesiqu@ncsu.edu>
-Description: Performs random-effect multiple interval mapping (REMIM) in full-sib families of autopolyploid species based on REML estimation and score statistics.
+Description: Performs random-effect multiple interval mapping (REMIM) in full-sib families of autopolyploid species based on restricted maximum likelihood (REML) estimation and score statistics.
 License: GPL-3 | file LICENSE
 URL: https://github.com/gabrielgesteira/QTLpoly
 BugReports: https://github.com/gabrielgesteira/QTLpoly/issues
