Small updates for CRAN

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ env:
 install:
 - R -e 'install.packages("devtools")'
 - R -e 'install.packages(c("sommer", "ggplot2", "abind", "gtools", "mappoly", "rmarkdown"))'
-- R -e 'remotes::install_github("cran/SPA3G")'
-- R -e 'remotes::install_github("cran/varComp")'
+- R -e 'devtools::install_github("cran/SPA3G")'
+- R -e 'devtools::install_github("cran/varComp")'
 
 r_build_args: --no-build-vignettes
 r_check_args: "--no-vignettes --as-cran --install-args=--build"
