--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(plot,qtlpoly.bvalues)
 S3method(plot,qtlpoly.effects)
 S3method(plot,qtlpoly.perm)
-S3method(plot,qtlpoly.rsmp)
 S3method(print,qtlpoly.data)
 S3method(print,qtlpoly.feim)
 S3method(print,qtlpoly.modify)
@@ -12,19 +11,15 @@ S3method(print,qtlpoly.optimize)
 S3method(print,qtlpoly.perm)
 S3method(print,qtlpoly.profile)
 S3method(print,qtlpoly.remim)
-S3method(print,qtlpoly.rsmp)
 S3method(print,qtlpoly.search)
 S3method(print,qtlpoly.simul)
 S3method(summary,qtlpoly.fitted)
 export(breeding_values)
 export(feim)
 export(fit_model)
-export(h)
-export(last)
 export(modify_qtl)
 export(null_model)
 export(optimize_qtl)
-export(permuta)
 export(permutations)
 export(plot_profile)
 export(plot_qtl)
@@ -33,7 +28,6 @@ export(profile_qtl)
 export(qtl_effects)
 export(read_data)
 export(remim)
-export(resampling)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
@@ -45,6 +39,16 @@ import(parallel)
 import(sommer)
 import(stats)
 import(utils)
-import(varComp)
+importFrom(CompQuadForm,davies)
+importFrom(MASS,ginv)
+importFrom(Matrix,nearPD)
+importFrom(RLRsim,RLRTSim)
 importFrom(abind,abind)
+importFrom(graphics,abline)
+importFrom(graphics,plot)
 importFrom(gtools,combinations)
+importFrom(mvtnorm,pmvnorm)
+importFrom(nlme,fixed.effects)
+importFrom(nlme,fixef)
+importFrom(quadprog,solve.QP)
+importFrom(utils,combn)
