Small updates (CRAN submission)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ importFrom(CompQuadForm,davies)
 importFrom(MASS,ginv)
 importFrom(Matrix,nearPD)
 importFrom(RLRsim,RLRTSim)
+importFrom(Rcpp,evalCpp)
 importFrom(abind,abind)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
@@ -51,3 +52,4 @@ importFrom(nlme,fixed.effects)
 importFrom(nlme,fixef)
 importFrom(quadprog,solve.QP)
 importFrom(utils,combn)
+useDynLib(qtlpoly, .registration = TRUE)
