Creating remim2 function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(profile_qtl)
 export(qtl_effects)
 export(read_data)
 export(remim)
+export(remim2)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
