Creating remim_multipop

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(qtl_effects)
 export(read_data)
 export(remim)
 export(remim2)
+export(remim_multipop)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
