Creating null_model2 (faster score-statistics computation)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(feim)
 export(fit_model)
 export(modify_qtl)
 export(null_model)
+export(null_model2)
 export(optimize_qtl)
 export(permutations)
 export(plot_profile)
