Adding null model function for multi-parental populations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(fit_model)
 export(modify_qtl)
 export(null_model)
 export(null_model2)
+export(null_model_multipop)
 export(optimize_qtl)
 export(permutations)
 export(plot_profile)
