add score_test and remim2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,12 @@ export(profile_qtl)
 export(qtl_effects)
 export(read_data)
 export(remim)
+export(remim2)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
+import(doParallel)
+import(foreach)
 import(ggplot2)
 import(grDevices)
 import(graphics)
