Adding SharedObject to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(remim2)
 export(search_qtl)
 export(simulate_qtl)
 import(MASS)
+import(SharedObject)
 import(doParallel)
 import(foreach)
 import(ggplot2)
