--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,10 +41,11 @@ BugReports: https://github.com/gabrielgesteira/QTLpoly/issues
 Encoding: UTF-8
 LazyData: TRUE
 LazyDataCompression: xz
+biocViews: 
 Depends:
     R (>= 4.0)
 Imports:
-     ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), CompQuadForm, Matrix, RLRsim, mvtnorm, nlme, quadprog, parallel, doParallel, foreach, stats, methods, Rcpp (>= 0.12.19)
+     ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), CompQuadForm, Matrix, RLRsim, mvtnorm, nlme, quadprog, parallel, doParallel, foreach, SharedObject, stats, methods, Rcpp (>= 0.12.19)
 LinkingTo: Rcpp, RcppArmadillo, RcppProgress
 Suggests: mappoly, rmarkdown, devtools, knitr
 RoxygenNote: 7.2.3
