Uploading latest changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(summary,qtlpoly.fitted)
 export(breeding_values)
 export(feim)
 export(fit_model)
+export(fit_model2)
 export(modify_qtl)
 export(null_model)
 export(null_model2)
@@ -28,6 +29,7 @@ export(plot_sint)
 export(profile_qtl)
 export(qtl_effects)
 export(read_data)
+export(read_data2)
 export(remim)
 export(remim2)
 export(search_qtl)
