Adding latest changes:
- Improved functions with faster benchmarks
- New function to read data (accomodates mappoly2 datasets)
- Small changes in code to meet CRAN policies and guidelines
- Minor bug fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(abind,abind)
 importFrom(graphics,abline)
 importFrom(graphics,plot)
 importFrom(gtools,combinations)
+importFrom(mappoly,calc_genoprob)
 importFrom(mvtnorm,pmvnorm)
 importFrom(nlme,fixed.effects)
 importFrom(nlme,fixef)
