--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,7 @@ LazyDataCompression: xz
 Depends:
     R (>= 4.0)
 Imports:
-     ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), CompQuadForm, Matrix, RLRsim, mvtnorm, nlme, quadprog, parallel, doParallel, foreach, stats, methods, Rcpp (>= 0.12.19)
+     ggplot2 (>= 3.1), abind (>= 1.4), MASS (>= 7.3), gtools (>= 3.9.2), CompQuadForm, Matrix, RLRsim, mvtnorm, nlme, quadprog, parallel, doParallel, foreach, stats, methods, mappoly, Rcpp (>= 0.12.19)
 LinkingTo: Rcpp, RcppArmadillo, RcppProgress
-Suggests: mappoly, rmarkdown, devtools, knitr
+Suggests: rmarkdown, devtools, knitr
 RoxygenNote: 7.2.3
